[package]
name = "ctoption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# default = [
#     "core_intrinsics",
#     "const_trait_impl",
#     "adt_const_params",
#     "const_precise_live_drops",
#     "generic_const_exprs",
# ]
core_intrinsics = []
const_trait_impl = []
adt_const_params = []
const_precise_live_drops = []
generic_const_exprs = []
