[package]
name = "ctoption"
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Demenev <dmitrii@searchless.ca>"]
description = "A compile-time option whose discriminant is elevated to compile time."
documentation = "https://docs.rs/ctoption"
readme = "README.md"
keywords = [
    "compilation",
    "option",
]
categories = [
    "data-structures",
    "memory-management",
    "no-std",
    "no-std::no-alloc",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/ctoption"

[features]
adt_const_params = []
const_precise_live_drops = []
const_trait_impl = []
core_intrinsics = []
generic_const_exprs = []
